--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,14 @@ server:
     contextPath: /
 
 spring:
+  #页面模板配置
+  freemarker:
+    # 本机测试时建议设置为false，上线时设置为true
+    cache: false
+    suffix: .ftlh
+    charset: UTF-8
+    content-type: text/html
+    template-loader-path: classpath:/templates/
   #数据库连接配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
