--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,65 +6,5 @@ server:
     contextPath: /
 
 spring:
-  #页面模板配置
-  freemarker:
-    # 本机测试时建议设置为false，上线时设置为true
-    cache: false
-    suffix: .ftlh
-    charset: UTF-8
-    content-type: text/html
-    template-loader-path: classpath:/templates/
-  #数据库连接配置
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      # 初始连接数
-      initial-size: 10
-      # 最大连接池数量
-      max-active: 100
-      # 最小连接池数量
-      min-idle: 10
-      # 配置获取连接等待超时的时间
-      max-wait: 60000
-      # 打开PSCache，并且指定每个连接上PSCache的大小
-      pool-prepared-statements: true
-      max-pool-prepared-statement-per-connection-size: 20
-      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-      timeBetweenEvictionRunsMillis: 60000
-      # 配置一个连接在池中最小生存的时间，单位是毫秒
-      min-evictable-idle-time-millis: 300000
-      validation-query: SELECT 1 FROM DUAL
-      test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
-      admin:
-        url: jdbc:mysql://111.230.187.248:59469/admin?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
-        username: admin
-        password: erfG202011
-      busi:
-        url: jdbc:mysql://111.230.187.248:59469/busi?useUnicode=true&characterEncoding=utf8
-        username: busi
-        password: erfG202011
-
-
-  #支持ansi则彩色输出
-  output:
-    ansi:
-      enabled: detect
-
-#mapper映射文件扫描路径,本项目使用注解mapper，不需要此配置
-#mybatis:
-  #mapper-locations: classpath:mapper/**/*.xml
-
-logging:
-  #日志路径
-  file:
-    name: ./logfiles/dev/dev.logfiles
-  #日志输出格式
-  pattern:
-    console: '%d{HH:mm:ss} %clr(%-5level){blue} %clr(%logger{32}){cyan} %clr(%msg%n){yellow}'
-    file: '%d{yyyy-MM-dd HH:mm:ss}[%thread]%-5level%logger{64}%msg%n'
-  #日志级别
-  level:
-    root: info
+  profiles:
+    active: dev
