--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </parent>
 
     <dependencies>
+        <!-- springboot框架 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -41,6 +42,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+        <!-- 数据库连接 -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -56,6 +58,7 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.2</version>
         </dependency>
+
     </dependencies>
 
     <build>
