--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <version>1.2.2</version>
         </dependency>
 
+        <!-- 前端框架 -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
