--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,24 +14,29 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       # 初始连接数
-      initial-size: 10
+      initial-size: 2
       # 最大连接池数量
       max-active: 100
       # 最小连接池数量
-      min-idle: 10
+      min-idle: 1
       # 配置获取连接等待超时的时间
-      max-wait: 60000
+      max-wait: 5000
       # 打开PSCache，并且指定每个连接上PSCache的大小
-      pool-prepared-statements: true
-      max-pool-prepared-statement-per-connection-size: 20
+      pool-prepared-statements: false
       # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
       timeBetweenEvictionRunsMillis: 60000
       # 配置一个连接在池中最小生存的时间，单位是毫秒
-      min-evictable-idle-time-millis: 300000
+      min-evictable-idle-time-millis: 60000
       validation-query: SELECT 1 FROM DUAL
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
+      #连接失败重试次数
+      connection-error-retry-attempts: 3
+      #失败后断出线程
+      break-after-acquire-failure: true
+      #连接失败后是否立即杀死挂起线程
+      fail-fast: true
       admin:
         url: jdbc:mysql://111.230.187.248:59469/admin?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
         username: admin
