--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <!-- freemarker热启动 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- 数据库连接 -->
         <dependency>
@@ -82,6 +88,7 @@
             <artifactId>common</artifactId>
             <version>1.0</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -105,6 +112,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>com.china.StartApplication</mainClass>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
         </plugins>
